--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -2,8 +2,17 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  gap: 0.5em;
-  height: 500px;
-  width: 500px;
-  margin: 2em auto;
+  gap: 1em;
+  margin: 0 auto;
+  padding: 2em;
+  box-sizing: border-box;
+
+  @media (orientation: landscape) {
+    height: 100vh;
+    width: 100vh;
+  }
+  @media (orientation: portrait) {
+    height: 100vw;
+    width: 100vw;
+  }
 }
